# ans2tosca

./: .gitignore  LICENSE  README.md  ans2json.py  ans2tosca.py  aws_ansible_extractor_usage.md  general.py  general_ansible_extractor_usage.md  pyproject.toml  robust.py~  tosca.py  try2.py  try3.py  try4.py  try5.py  try6.py
.github/workflows/: release.yml
ans2tosca/: __init__.py  __main__.py  arg_spec.py  json_schema.py  playbook.py  tosca.py
old/: __init__.py  __main__.py  arg_spec.py  playbook.py  tosca.py
